<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_voice"/>
        <item
            android:id="@+id/nav_direction"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_direction" />

        <item
            android:id="@+id/nav_sleep"
            android:title="@string/menu_sleep" />

        <item
            android:id="@+id/nav_monitoring"
            android:title="@string/menu_monitoring" />
    </group>
</menu>